--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 </style>
 <body>
     <div class="div">
-        <div class="btn"><a href="index.html"></a></div>
+        <div class="btn"><a href="main.html"></a></div>
     </div>
 </body>
 </html>
