--- a/main.html
+++ b/main.html
@@ -32,7 +32,7 @@
                 </div>
             </div>
             <button class="rstbtn">Reset Game</button>
-            <button class="exitbtn"><a href="homepage.html">Exit Game</a></button>
+            <button class="exitbtn"><a href="index.html">Exit Game</a></button>
         </main>
     </div>
     <div class="vertical1 hide">
